--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -14,7 +14,7 @@
         <img src="images/avatar.jpg" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
 
-        <!-- Your name is defined in the _config.yml file -->
+        <!-- Your name is defined in the '_config.yml' file -->
         <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
 
         <!-- Contact buttons don't work in print, configure in the _config.yml file, remove "print-only" to display always. -->
